Menyelesaikan landing page

--- a/html/index.html
+++ b/html/index.html
@@ -39,6 +39,86 @@
         <br><br><br><br><br><br>
         <img src="../asset/wave/wave (2).svg" alt="">
     </section>
-
+    <section class="kelebihan">
+        <div>
+            <h1>Cuplikan kelebihan Linux</h1>
+                <div class="feature-box">
+                    <div class="feature">
+                        <img src="../asset/icon/flexibility.png" alt="">
+                        <h3>Fleksibilitas</h3>
+                    </div>
+                    <div class="feature">
+                        <img src="../asset/icon/keandalan.png" alt="">
+                        <h3>Keandalan</h3>
+                    </div>
+                    <div class="feature">
+                        <img src="../asset/icon/laptop.png" alt="">
+                        <h3>Kompatibilitas</h3>
+                    </div>
+                    <div class="feature">
+                        <img src="../asset/icon/download (2).png" alt="">
+                        <h3>Biaya</h3>
+                    </div>
+                </div>
+        </div>
+        <img src="../asset/wave/wave (1).svg" alt="">
+    </section>
+    <section class="anggota-kelompok">
+        <div>
+            <h1>Anggota Kelompok 7</h1>
+                <div class="feature-box">
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Zaskia</h3>
+                        </div>
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Alyana</h3>
+                    </div>
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Fathur</h3>
+                    </div>
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Indah</h3>
+                    </div>
+                </div>
+                <div class="feature-box">
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Irawan</h3>
+                        </div>
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Latifah</h3>
+                    </div>
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Lily</h3>
+                    </div>
+                </div>
+        </div>
+        <img src="../asset/wave/wave (2).svg" alt="">
+    </section>
+    <section class="kabing">
+        <div>
+            <h1>Kakak Pembimbing</h1>
+                <div class="feature-box">
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Risi</h3>
+                        </div>
+                    <div class="feature">
+                        <img src="../asset/icon/icon kosong.png" alt="">
+                        <h3>Bayu</h3>
+                    </div>
+                </div>
+        </div>
+        <br><br><br><br><br>
+    </section>
+    <footer class="foter">
+        <p class="hak-cipta">Hak Cipta © 2025 Ghidra Kelompok 7. Semua hak dilindungi.</p>
+    </footer>
 </body>
 </html>
