--- a/html/kelebihan.html
+++ b/html/kelebihan.html
@@ -25,9 +25,42 @@
     </section>
     <section class="isi">
         <div class="judul">
-            <h1> Kelebihan</h1>
+            <h1> Kelebihan Linux</h1>
+        </div>
+        <div class="box-all">
+            <div class="box1">
+                <div class="box">
+                    <img src="../asset/icon/keandalan.png" alt="">
+                    <h1>Keandalan</h1>
+                    <p>Linux dianggap sebagai OS yang sangat andal, sebagian besar karena komunitas pengembangan global yang terus memperbarui dan memelihara basis kodenya. untuk alsan yang sama, Linux juga dianggap sangat stabil</p>
+                </div>
+                <div class="box">
+                    <img src="../asset/icon/kompatibilitas.png" alt="">
+                    <h1>Kompatibilitas</h1>
+                    <p>Linux dianggap sebagai "kompatibel dengan versi sebelumnya" seperti banyak jenis perangkat lunak sumber terbuka lainnya. Artinya kode sumbernya terus-menerus diubah dan ditambal untuk mengatasi masalah keamanan dan kompatibilitas, sembari tetap mempertahankan fungsional aslinya</p>
+                </div>
+            </div>
+            <div class="box2">
+                <div class="box">
+                    <img src="../asset/icon/flexibility.png" alt="">
+                    <h1>Fleksibilitas</h1>
+                    <p>Setiap distribusi kernel Linux baru, yang dikenal sebagai distro, dirilis di bawah lisensi yang disebut GNU GPL (GNU General Public License) sumber terbuka, yang memberi pengguna hak untuk menjalankan, berbagi, dan memodifikasi basis kode sesuai kebutuhan</p>
+                </div>
+                <div class="box">
+                    <img src="../asset/icon/download (2).png" alt="">
+                    <h1>Biaya</h1>
+                    <p>Tidak seperti sistem operasi berpemilik, seperti Microsoft Windows atau macOS, Linux tidak membebankan biaya lisensi apa pun. Namun, vendor Linux, seperti RedHat, Debian, dan SUSE, membebankan biaya untuk memberikan dukungan.</p>
+                </div>
+            </div>
         </div>
     </section>
+    <img src="../asset/wave/wave (2).svg" alt="" class="wave">
+    <section class="btn">
+    <button>Kembali Ke Utama</button>
+    </section>
+    <footer class="foter">
+        <p class="hak-cipta">Hak Cipta © 2025 Ghidra Kelompok 7. Semua hak dilindungi.</p>
+    </footer>
 </body>
 
 </html>
